fix: table header align

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -165,6 +165,7 @@
     font-weight: normal;
     padding: 1em 0.5em;
     white-space: nowrap;
+    text-align: right;
   }
 
   --form-table-td: {
